zsh: major option handling debug

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,9 @@ ignore=
     D103
     D105
 exclude=.tox,build,dist,.git,__pycache__
+
+[isort]
+include_trailing_comma=true
+known_first_party=shtab
+line_length=79
+multi_line_output=3
