--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - run: pip install -U .[dev]
+    - run: pip install -U -r requirements-dev.txt
     - run: python setup.py check -mrs
     - run: pre-commit run --all-files
   test:
@@ -25,8 +25,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python }}
-    - run: pip install -U nose
-    - run: nosetests -d -v tests/
+    - run: pip install -U -r requirements-dev.txt
+    - run: python -m tests
   deploy:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     name: PyPI Deploy
