--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     - py27
     id: black
     language_version: python3
-  repo: https://github.com/ambv/black
+  repo: https://github.com/psf/black
   rev: 19.10b0
 - hooks:
   - id: isort
