--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - run: pip install -U -r requirements-dev.txt
+    - run: pip install -U -r requirements-dev.txt twine
     - run: python setup.py check -mrs
     - run: pre-commit run --all-files
   test:
