tests: fix isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,6 @@ include_trailing_comma=true
 known_first_party=shtab
 line_length=79
 multi_line_output=3
+
+[isort.settings]
+known_third_party = pytest
