--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,10 @@ repos:
     language_version: python3
   repo: https://github.com/psf/black
   rev: 19.10b0
+- repo: https://github.com/asottile/seed-isort-config
+  rev: v2.2.0
+  hooks:
+  -   id: seed-isort-config
 - hooks:
   - id: isort
     language_version: python3
@@ -18,4 +22,4 @@ repos:
   - id: flake8
     language_version: python3
   repo: https://gitlab.com/pycqa/flake8
-  rev: 3.7.9
+  rev: 3.8.3
