--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,6 @@ exclude=.tox,build,dist,.git,__pycache__
 [isort]
 include_trailing_comma=true
 known_first_party=shtab
+known_third_party=pytest
 line_length=79
 multi_line_output=3
-
-[isort.settings]
-known_third_party = pytest
