--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,10 @@
 # Misc
 include LICENCE
-include Makefile
 
 # Test suite
 recursive-include tests *.py
 include requirements-dev.txt
 
 # Examples/Documentation
+recursive-include examples *.py
 include README.rst
