--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,7 @@ jobs:
         python-version: ${{ matrix.python }}
     - run: pip install -U -r requirements-dev.txt
     - run: python -m tests
+    - uses: codecov/codecov-action@v1
   deploy:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     name: PyPI Deploy
@@ -43,13 +44,13 @@ jobs:
         run: |
           echo "::set-output name=asset_path::$(ls dist/*.whl)"
           echo "::set-output name=asset_name::$(basename dist/*.whl)"
+          git fetch --tags
           changes="$(git log --format='format:%d %B %N' $(git tag --sort=v:refname | tail -n2 | xargs | awk '{print $1".."$2}'))"
           changes="${changes//' '/'%20'}"
           changes="${changes//'%'/'%25'}"
           changes="${changes//$'\n'/'%0A'}"
           changes="${changes//$'\r'/'%0D'}"
           echo "::set-output name=change_log::${changes}"
-          echo "${changes}"
       - id: create_release
         uses: actions/create-release@v1
         env:
