CI: deploy: use body_path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,12 +44,8 @@ jobs:
       run: |
         echo "::set-output name=asset_path::$(ls dist/*.whl)"
         echo "::set-output name=asset_name::$(basename dist/*.whl)"
-        git fetch --unshallow
-        changes="$(git log --format='format:%d %B %N' $(git tag --sort=v:refname | tail -n2 | xargs | awk '{print $1".."$2}'))"
-        changes="${changes//'%'/'%25'}"
-        changes="${changes//$'\n'/'%0A'}"
-        changes="${changes//$'\r'/'%0D'}"
-        echo "::set-output name=change_log::${changes}"
+        git fetch --unshallow --tags
+        git log --format='format:%d %B %N' $(git tag --sort=v:refname | tail -n2 | xargs | awk '{print $1".."$2}') > _CHANGES.md
     - id: create_release
       uses: actions/create-release@v1
       env:
@@ -57,7 +53,7 @@ jobs:
       with:
         tag_name: ${{ github.ref }}
         release_name: shtab ${{ github.ref }} alpha
-        body: ${{ steps.collect_assets.outputs.change_log }}
+        body_path: _CHANGES.md
         draft: true
     - uses: actions/upload-release-asset@v1
       env:
