--- a/.github/workflows/comment-bot.yml
+++ b/.github/workflows/comment-bot.yml
@@ -6,7 +6,7 @@ on:
     types: [created, edited]
 
 jobs:
-  tag:
+  tag:  # /tag <tagname> <commit>
     if: startsWith(github.event.comment.body, '/tag ')
     runs-on: ubuntu-latest
     steps:
@@ -15,14 +15,14 @@ jobs:
       uses: actions/github-script@v2
       with:
         script: |
-          perm = github.repos.getCollaboratorPermissionLevel({
+          const perm = await github.repos.getCollaboratorPermissionLevel({
             owner: context.repo.owner, repo: context.repo.repo,
             username: context.payload.comment.user.login})
-          post = (context.eventName === 'issue_comment'
+          post = (context.eventName == "issue_comment"
             ? github.reactions.createForIssueComment
             : github.reactions.createForPullRequestReviewComment)
 
-          if (!['admin', 'write'].includes(perm)){
+          if (!["admin", "write"].includes(perm.data.permission)){
             post({
               owner: context.repo.owner, repo: context.repo.repo,
               comment_id: context.payload.comment.id, content: "laugh"})
@@ -44,7 +44,7 @@ jobs:
       uses: actions/github-script@v2
       with:
         script: |
-          post = (context.eventName === 'issue_comment'
+          post = (context.eventName == "issue_comment"
             ? github.reactions.createForIssueComment
             : github.reactions.createForPullRequestReviewComment)
           post({
