--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     - run: pip install -U -r requirements-dev.txt
-    - run: python -m tests
+    - run: python -m tests --cov-report=term-missing
     - uses: codecov/codecov-action@v1
   deploy:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
