--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,25 +1,32 @@
+default_language_version:
+  python: python3
 repos:
-- hooks:
-  - args:
-    - -l
-    - '79'
-    - -t
-    - py27
-    id: black
-    language_version: python3
-  repo: https://github.com/psf/black
-  rev: 19.10b0
-- repo: https://github.com/asottile/seed-isort-config
-  rev: v2.2.0
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.4.0
   hooks:
-  - id: seed-isort-config
-- hooks:
-  - id: isort
-    language_version: python3
-  repo: https://github.com/timothycrosley/isort
-  rev: 4.3.21
+  - id: check-added-large-files
+  - id: check-case-conflict
+  - id: check-docstring-first
+  - id: check-executables-have-shebangs
+  - id: check-toml
+  - id: check-yaml
+  - id: end-of-file-fixer
+  - id: mixed-line-ending
+  - id: trailing-whitespace
 - hooks:
   - id: flake8
-    language_version: python3
+    additional_dependencies:
+    - flake8-bugbear
+    - flake8-comprehensions
+    - flake8-debugger
+    - flake8-string-format
   repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.3
+  rev: 3.8.4
+- hooks:
+  - id: black
+  repo: https://github.com/psf/black
+  rev: 19.10b0
+- hooks:
+  - id: isort
+  repo: https://github.com/timothycrosley/isort
+  rev: 5.6.4
