--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [2.7, 3.8]
+        python: [2.7, 3.6, 3.9]
     steps:
     - uses: actions/checkout@v2
       with:
