build: exclude tests
- fixes #30

--- a/setup.cfg
+++ b/setup.cfg
@@ -70,6 +70,8 @@ packages=find:
 [options.entry_points]
 console_scripts=
     shtab=shtab.main:main
+[options.packages.find]
+exclude=tests
 [bdist_wheel]
 universal=1
 
