--- a/setup.cfg
+++ b/setup.cfg
@@ -83,3 +83,7 @@ exclude=build,dist,.eggs,.git,__pycache__
 [isort]
 profile=black
 known_first_party=shtab
+
+[tool:pytest]
+timeout=5
+addopts=-v --tb=short -rxs -W=error --log-level=debug --durations=0 --cov=shtab --cov-report=term-missing --cov-report=xml
