--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,7 @@ jobs:
       with:
         path: ~/.cache/pre-commit
         key: pre-commit|${{ env.PYSHA }}|${{ hashFiles('.pre-commit-config.yaml') }}
-    - run: pip install -U -r requirements-dev.txt
-    - run: python setup.py sdist bdist_wheel
-    - run: twine check dist/*
+    - run: pip install -U pre-commit
     - uses: reviewdog/action-setup@v1
     - run: |
         pre-commit run -a flake8 | reviewdog -f=pep8 -name=flake8 -tee -reporter=github-check -filter-mode nofilter
@@ -42,10 +40,9 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
     - run: pip install -U -r requirements-dev.txt
-    - run: python -m tests --cov-report=term-missing
+    - run: pytest
     - uses: codecov/codecov-action@v1
   deploy:
-    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     name: PyPI Deploy
     needs: [check, test]
     runs-on: ubuntu-latest
@@ -53,17 +50,17 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - uses: casperdcl/deploy-pypi@v1
+    - uses: actions/setup-python@v2
+    - id: dist
+      uses: casperdcl/deploy-pypi@v2
       with:
-        password: ${{ secrets.PYPI_TOKEN }}
         build: true
-    - id: collect_assets
-      name: Collect assets
-      run: |
-        echo "::set-output name=asset_path::$(ls dist/*.whl)"
-        echo "::set-output name=asset_name::$(basename dist/*.whl)"
-        git log --pretty='format:%d%n- %s%n%b---' $(git tag --sort=v:refname | tail -n2 | head -n1)..HEAD > _CHANGES.md
-    - id: create_release
+        password: ${{ secrets.PYPI_TOKEN }}
+        upload: ${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}
+    - name: Changelog
+      run: git log --pretty='format:%d%n- %s%n%b---' $(git tag --sort=v:refname | tail -n2 | head -n1)..HEAD > _CHANGES.md
+    - if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+      id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -72,11 +69,12 @@ jobs:
         release_name: shtab ${{ github.ref }} beta
         body_path: _CHANGES.md
         draft: true
-    - uses: actions/upload-release-asset@v1
+    - if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ steps.collect_assets.outputs.asset_path }}
-        asset_name: ${{ steps.collect_assets.outputs.asset_name }}
+        asset_path: dist/${{ steps.dist.outputs.whl }}
+        asset_name: ${{ steps.dist.outputs.whl }}
         asset_content_type: application/zip
