--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,27 +54,18 @@ jobs:
     - id: dist
       uses: casperdcl/deploy-pypi@v2
       with:
-        build: true
+        pip: true
         password: ${{ secrets.PYPI_TOKEN }}
         upload: ${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}
     - name: Changelog
       run: git log --pretty='format:%d%n- %s%n%b---' $(git tag --sort=v:refname | tail -n2 | head -n1)..HEAD > _CHANGES.md
     - if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
-      id: create_release
-      uses: actions/create-release@v1
+      uses: softprops/action-gh-release@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: shtab ${{ github.ref }} beta
+        release_name: shtab ${{ github.ref }} stable
         body_path: _CHANGES.md
         draft: true
-    - if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: dist/${{ steps.dist.outputs.whl }}
-        asset_name: ${{ steps.dist.outputs.whl }}
-        asset_content_type: application/zip
+        files: |
+          dist/${{ steps.dist.outputs.whl }}
