--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,8 @@ jobs:
     - id: dist
       uses: casperdcl/deploy-pypi@v2
       with:
-        pip: true
+        requirements: twine setuptools wheel setuptools_scm[toml]
+        build: true
         password: ${{ secrets.PYPI_TOKEN }}
         upload: ${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}
     - name: Changelog
