--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,15 +55,19 @@ jobs:
         requirements: twine setuptools wheel setuptools_scm[toml]
         build: true
         password: ${{ secrets.PYPI_TOKEN }}
-        upload: ${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}
+        upload: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
     - name: Changelog
       run: git log --pretty='format:%d%n- %s%n%b---' $(git tag --sort=v:refname | tail -n2 | head -n1)..HEAD > _CHANGES.md
-    - if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+    - id: meta
+      name: Metadata
+      run: |
+        echo "::set-output name=tag::${GITHUB_REF#refs/tags/}"
+    - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       uses: softprops/action-gh-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
       with:
-        name: shtab ${{ github.ref }} beta
+        name: shtab ${{ steps.meta.outputs.tag }} beta
         body_path: _CHANGES.md
         draft: true
         files: |
