--- a/setup.cfg
+++ b/setup.cfg
@@ -86,4 +86,7 @@ known_first_party=shtab
 
 [tool:pytest]
 timeout=5
-addopts=-v --tb=short -rxs -W=error --log-level=debug --durations=0 --cov=shtab --cov-report=term-missing --cov-report=xml
+log_level=DEBUG
+python_files=test_*.py
+testpaths=tests
+addopts=-v --tb=short -rxs -W=error --durations=0 --cov=shtab --cov-report=term-missing --cov-report=xml
