misc metadata & tests updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,10 @@ url=https://github.com/iterative/shtab
 project_urls=
     Changelog=https://github.com/iterative/shtab/releases
     Documentation=https://github.com/iterative/shtab/#shtab
-maintainer=Casper da Costa-Luis
-maintainer_email=casper.dcl@physics.org
+author=Casper da Costa-Luis
+author_email=casper.dcl@physics.org
+maintainer=Iterative
+maintainer_email=support@iterative.ai
 keywords=tab, complete, completion, shell, bash, zsh, argparse
 platforms=any
 provides=shtab
@@ -51,11 +53,13 @@ classifiers=
     Topic :: Education :: Testing
     Topic :: Office/Business
     Topic :: Other/Nonlisted Topic
+    Topic :: Software Development
     Topic :: Software Development :: Build Tools
     Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Software Development :: Pre-processors
     Topic :: Software Development :: User Interfaces
+    Topic :: System
     Topic :: System :: Installation/Setup
     Topic :: System :: Shells
     Topic :: System :: System Shells
@@ -82,7 +86,7 @@ exclude=build,dist,.eggs,.git,__pycache__
 
 [isort]
 profile=black
-known_first_party=shtab
+known_first_party=shtab,tests
 
 [tool:pytest]
 timeout=5
