--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
   - cron: '0 9 * * 1'  # M H d m w (Mondays at 9:00)
 jobs:
   check:
-    if: startsWith(github.ref, 'refs/tags') || github.event_name == 'pull_request' || github.repository_owner != 'iterative'
+    if: startsWith(github.ref, 'refs/tags') || github.event_name == 'pull_request' || github.event_name == 'schedule' || github.repository_owner != 'iterative'
     name: Check
     runs-on: ubuntu-latest
     steps:
@@ -35,7 +35,7 @@ jobs:
         REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: pre-commit run -a --show-diff-on-failure
   test:
-    if: startsWith(github.ref, 'refs/tags') || github.event_name == 'pull_request' || github.repository_owner != 'iterative'
+    if: startsWith(github.ref, 'refs/tags') || github.event_name == 'pull_request' || github.event_name == 'schedule' || github.repository_owner != 'iterative'
     name: Test py${{ matrix.python }}
     runs-on: ubuntu-latest
     strategy:
