--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,9 @@
 pytest
 pytest-cov
 pytest-timeout
+# docs
+mkdocs-material
+git+git://github.com/serenecloud/jsmin@python3-only#egg=jsmin
+mkdocs-minify-plugin>0.1.0
+pymdown-extensions
+pygments
