update docs URL

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ license_file=LICENCE
 url=https://github.com/iterative/shtab
 project_urls=
     Changelog=https://github.com/iterative/shtab/releases
-    Documentation=https://github.com/iterative/shtab/#shtab
+    Documentation=https://docs.iterative.ai/shtab
 author=Casper da Costa-Luis
 author_email=casper.dcl@physics.org
 maintainer=Iterative
