--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,9 +88,9 @@ jobs:
       run: |
         pip install -U -r docs/requirements.txt
         if [[ "$DEPLOY" == true ]]; then
-          mkdocs gh-deploy --force
+          mkdocs gh-deploy -f docs/mkdocs.yml --force
         else
-          mkdocs build
+          mkdocs build -f docs/mkdocs.yml
         fi
       env:
         DEPLOY: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
