--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name=shtab
-description=Automatically generate shell tab completion scripts for python CLI apps
+description=Automagic shell tab completion for Python CLI applications
 long_description=file: README.rst
 long_description_content_type=text/x-rst
 license=Apache-2.0
