don't package docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ packages=find:
 console_scripts=
     shtab=shtab.main:main
 [options.packages.find]
-exclude=tests
+exclude=docs,tests
 [bdist_wheel]
 universal=1
 
