--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,21 +89,14 @@ jobs:
         pushd docs
         pip install -U -r requirements.txt
         PYTHONPATH=. pydoc-markdown --build --site-dir=../../../dist/site
-        if [[ "$DEPLOY" == true ]]; then
-          mkdir ../pages
-          pushd ../pages
-          cp -r ../.git .
-          git checkout gh-pages
-          git ls-files -z | xargs -0 git rm
-          cp -r ../dist/site/* .
-          touch .nojekyll
-          git add .
-          git config user.name "Olivaw[bot]"
-          git config user.email "64868532+iterative-olivaw@users.noreply.github.com"
-          git commit -m "update static site"
-          git push
-          popd
-        fi
         popd
-      env:
-        DEPLOY: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+    - if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+      uses: casperdcl/push-dir@v1
+      with:
+        message: update static site
+        branch: gh-pages
+        history: false
+        dir: dist/site
+        nojekyll: true
+        name: Olivaw[bot]
+        email: 64868532+iterative-olivaw@users.noreply.github.com
