--- a/docs/pydoc-markdown.yml
+++ b/docs/pydoc-markdown.yml
@@ -51,6 +51,8 @@ renderer:
     copyright: |
       &copy; Casper da Costa-Luis <a href="https://github.com/casperdcl">@casperdcl</a> 2021
 
+    extra:
+      generator: false
     theme:
       name: material
       logo: https://github.com/iterative/shtab/raw/master/meta/logo.png
