--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 mkdocs-material
 git+git://github.com/iterative/jsmin@python3-only#egg=jsmin
 mkdocs-minify-plugin
-pymdown-extensions
+pydoc-markdown>=4
 pygments
-pydoc-markdown
+pymdown-extensions
