--- a/setup.cfg
+++ b/setup.cfg
@@ -66,10 +66,10 @@ classifiers=
     Topic :: Terminals
     Topic :: Utilities
 [options]
-setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
+setup_requires=setuptools>=42; wheel; setuptools_scm[toml]>=3.4
 install_requires=
     argparse; python_version < "2.7" or ("3.0" <= python_version and python_version < "3.2")
-python_requires= >=2.7, !=3.0.*, !=3.1.*
+python_requires=>=2.7, !=3.0.*, !=3.1.*
 packages=find:
 [options.entry_points]
 console_scripts=
@@ -80,12 +80,24 @@ exclude=docs,tests
 universal=1
 
 [flake8]
-max_line_length=88
-extend-ignore=E203,P1
+max_line_length=99
+extend-ignore=E261,P1
 exclude=build,dist,.eggs,.git,__pycache__
+
+[yapf]
+spaces_before_comment=15, 20
+arithmetic_precedence_indication=true
+allow_split_before_dict_value=false
+coalesce_brackets=True
+column_limit=99
+each_dict_entry_on_separate_line=False
+space_between_ending_comma_and_closing_bracket=False
+split_before_named_assigns=False
+split_before_closing_bracket=False
 
 [isort]
 profile=black
+line_length=99
 known_first_party=shtab,tests
 
 [tool:pytest]
