Initial type hints support

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,8 @@ packages=find:
 [options.entry_points]
 console_scripts=
     shtab=shtab.main:main
+[options.package_data]
+shtab=py.typed
 [options.packages.find]
 exclude=docs,tests
 [bdist_wheel]
