--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,6 @@ classifiers=
     Operating System :: Unix
     Programming Language :: Other Scripting Engines
     Programming Language :: Python
-    Programming Language :: Python :: 2
-    Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
@@ -68,8 +66,8 @@ classifiers=
 [options]
 setup_requires=setuptools>=42; wheel; setuptools_scm[toml]>=3.4
 install_requires=
-    argparse; python_version < "2.7" or ("3.0" <= python_version and python_version < "3.2")
-python_requires=>=2.7, !=3.0.*, !=3.1.*
+    argparse; "3.0" <= python_version and python_version < "3.2"
+python_requires=>=3.2
 packages=find:
 [options.entry_points]
 console_scripts=
