tests: pre-commit mypy config

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,6 +84,14 @@ max_line_length=99
 extend-ignore=E261,P1
 exclude=build,dist,.eggs,.git,__pycache__
 
+[mypy]
+warn_unused_configs=True
+warn_unused_ignores=True
+show_error_codes=True
+# https://github.com/pypa/setuptools_scm/issues/501
+[mypy-setuptools_scm]
+ignore_missing_imports=True
+
 [yapf]
 spaces_before_comment=15, 20
 arithmetic_precedence_indication=true
