--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,10 @@ repos:
     - flake8-debugger
     - flake8-isort
     - flake8-string-format
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v0.930
+  hooks:
+  - id: mypy
 - repo: https://github.com/google/yapf
   rev: v0.31.0
   hooks:
