--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.0.1
+  rev: v4.1.0
   hooks:
   - id: check-added-large-files
   - id: check-case-conflict
@@ -42,10 +42,12 @@ repos:
   hooks:
   - id: mypy
 - repo: https://github.com/google/yapf
-  rev: v0.31.0
+  rev: v0.32.0
   hooks:
   - id: yapf
     args: [-i]
+    additional_dependencies:
+    - toml
 - repo: https://github.com/PyCQA/isort
   rev: 5.10.1
   hooks:
