--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ on:
   push:
   pull_request:
   schedule:
-  - cron: '0 9 * * 1'  # M H d m w (Mondays at 9:00)
+    - cron: "0 9 * * 1" # M H d m w (Mondays at 9:00)
   workflow_dispatch:
 jobs:
   check:
@@ -11,31 +11,31 @@ jobs:
     name: Check
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-    - name: set PYSHA
-      run: echo "PYSHA=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
-    - uses: actions/cache@v1
-      with:
-        path: ~/.cache/pre-commit
-        key: pre-commit|${{ env.PYSHA }}|${{ hashFiles('.pre-commit-config.yaml') }}
-    - run: pip install -U pre-commit
-    - uses: reviewdog/action-setup@v1
-    - if: github.event_name == 'push' || github.event_name == 'pull_request'
-      name: comment
-      run: |
-        if [[ $EVENT == pull_request ]]; then
-          REPORTER=github-pr-review
-        else
-          REPORTER=github-check
-        fi
-        pre-commit run -a todo | reviewdog -efm="%f:%l: %m" -name=TODO -tee -reporter=$REPORTER -filter-mode nofilter
-        pre-commit run -a flake8 | reviewdog -f=pep8 -name=flake8 -tee -reporter=$REPORTER -filter-mode nofilter
-        pre-commit run -a mypy | reviewdog -efm="%f:%l: %m" -name=mypy -tee -reporter=$REPORTER -filter-mode nofilter
-      env:
-        REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        EVENT: ${{ github.event_name }}
-    - run: pre-commit run -a --show-diff-on-failure
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+      - name: set PYSHA
+        run: echo "PYSHA=$(python -VV | sha256sum | cut -d' ' -f1)" >> $GITHUB_ENV
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit|${{ env.PYSHA }}|${{ hashFiles('.pre-commit-config.yaml') }}
+      - run: pip install -U pre-commit
+      - uses: reviewdog/action-setup@v1
+      - if: github.event_name == 'push' || github.event_name == 'pull_request'
+        name: comment
+        run: |
+          if [[ $EVENT == pull_request ]]; then
+            REPORTER=github-pr-review
+          else
+            REPORTER=github-check
+          fi
+          pre-commit run -a todo | reviewdog -efm="%f:%l: %m" -name=TODO -tee -reporter=$REPORTER -filter-mode nofilter
+          pre-commit run -a flake8 | reviewdog -f=pep8 -name=flake8 -tee -reporter=$REPORTER -filter-mode nofilter
+          pre-commit run -a mypy | reviewdog -efm="%f:%l: %m" -name=mypy -tee -reporter=$REPORTER -filter-mode nofilter
+        env:
+          REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          EVENT: ${{ github.event_name }}
+      - run: pre-commit run -a --show-diff-on-failure
   test:
     if: github.event_name != 'pull_request' || !contains('OWNER,MEMBER,COLLABORATOR', github.event.pull_request.author_association)
     name: Test py${{ matrix.python }}
@@ -44,62 +44,62 @@ jobs:
       matrix:
         python: [3.6, 3.9]
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python }}
-    - name: Install
-      run: pip install -U -r requirements-dev.txt
-    - run: pytest
-    - uses: codecov/codecov-action@v1
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Install
+        run: pip install -U -r requirements-dev.txt
+      - run: pytest
+      - uses: codecov/codecov-action@v1
   deploy:
     needs: [check, test]
     name: PyPI Deploy
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-        token: ${{ secrets.GH_TOKEN }}
-    - uses: actions/setup-python@v2
-    - id: dist
-      uses: casperdcl/deploy-pypi@v2
-      with:
-        requirements: twine setuptools wheel setuptools_scm[toml]
-        build: true
-        password: ${{ secrets.PYPI_TOKEN }}
-        upload: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
-    - id: meta
-      name: Changelog
-      run: |
-        echo ::set-output name=tag::${GITHUB_REF#refs/tags/}
-        git log --pretty='format:%d%n- %s%n%b---' $(git tag --sort=v:refname | tail -n2 | head -n1)..HEAD > _CHANGES.md
-    - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-      uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-      with:
-        name: shtab ${{ steps.meta.outputs.tag }} beta
-        body_path: _CHANGES.md
-        draft: true
-        files: |
-          dist/${{ steps.dist.outputs.whl }}
-          dist/${{ steps.dist.outputs.targz }}
-    - name: Docs
-      run: |
-        pushd docs
-        pip install -U -r requirements.txt
-        PYTHONPATH=. pydoc-markdown --build --site-dir=../../../dist/site
-        popd
-    - if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') || github.event_name == 'workflow_dispatch' }}
-      uses: casperdcl/push-dir@v1
-      with:
-        message: update static site
-        branch: gh-pages
-        history: false
-        dir: dist/site
-        nojekyll: true
-        name: Olivaw[bot]
-        email: 64868532+iterative-olivaw@users.noreply.github.com
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GH_TOKEN }}
+      - uses: actions/setup-python@v2
+      - id: dist
+        uses: casperdcl/deploy-pypi@v2
+        with:
+          requirements: twine setuptools wheel setuptools_scm[toml]
+          build: true
+          password: ${{ secrets.PYPI_TOKEN }}
+          upload: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') }}
+      - id: meta
+        name: Changelog
+        run: |
+          echo ::set-output name=tag::${GITHUB_REF#refs/tags/}
+          git log --pretty='format:%d%n- %s%n%b---' $(git tag --sort=v:refname | tail -n2 | head -n1)..HEAD > _CHANGES.md
+      - if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          name: shtab ${{ steps.meta.outputs.tag }} beta
+          body_path: _CHANGES.md
+          draft: true
+          files: |
+            dist/${{ steps.dist.outputs.whl }}
+            dist/${{ steps.dist.outputs.targz }}
+      - name: Docs
+        run: |
+          pushd docs
+          pip install -U -r requirements.txt
+          PYTHONPATH=. pydoc-markdown --build --site-dir=../../../dist/site
+          popd
+      - if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags') || github.event_name == 'workflow_dispatch' }}
+        uses: casperdcl/push-dir@v1
+        with:
+          message: update static site
+          branch: gh-pages
+          history: false
+          dir: dist/site
+          nojekyll: true
+          name: Olivaw[bot]
+          email: 64868532+iterative-olivaw@users.noreply.github.com
