--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,16 +39,16 @@ repos:
     - flake8-string-format
     - flake8-type-annotations
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.961
+  rev: v0.982
   hooks:
   - id: mypy
+    additional_dependencies: [types-setuptools]
 - repo: https://github.com/google/yapf
   rev: v0.32.0
   hooks:
   - id: yapf
     args: [-i]
-    additional_dependencies:
-    - toml
+    additional_dependencies: [toml]
 - repo: https://github.com/PyCQA/isort
   rev: 5.10.1
   hooks:
