--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [3.6, 3.9]
+        python: [3.6, '3.10']
     steps:
     - uses: actions/checkout@v3
       with:
