--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,8 @@ classifiers=
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: Implementation
     Programming Language :: Python :: Implementation :: IronPython
     Programming Language :: Python :: Implementation :: PyPy
