--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,7 +61,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GH_TOKEN || github.token }}
     - uses: actions/setup-python@v4
     - id: dist
       uses: casperdcl/deploy-pypi@v2
