--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,8 +25,8 @@ repos:
     entry: TODO
     types: [text]
     exclude: ^(.pre-commit-config.yaml|.github/workflows/test.yml)$
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.9.2
+- repo: https://github.com/PyCQA/flake8
+  rev: 5.0.4
   hooks:
   - id: flake8
     args: [-j8]
@@ -37,9 +37,8 @@ repos:
     - flake8-debugger
     - flake8-isort
     - flake8-string-format
-    - flake8-type-annotations
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.982
+  rev: v0.991
   hooks:
   - id: mypy
     additional_dependencies: [types-setuptools]
