--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,5 @@
 mkdocs-material
-git+https://github.com/iterative/jsmin@python3-only#egg=jsmin
+git+https://github.com/tqdm/jsmin@python3-only#egg=jsmin
 mkdocs-minify-plugin
 pydoc-markdown>=4
 pygments
