--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,8 @@ classifiers=
 setup_requires=setuptools>=42; wheel; setuptools_scm[toml]>=3.4
 python_requires=>=3.7
 packages=find:
+[options.extras_require]
+dev=pytest; pytest-cov; pytest-timeout
 [options.entry_points]
 console_scripts=
     shtab=shtab.main:main
